--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,5 @@
 h1 {
   color: black;
-  font-size: 54px;
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-weight: 500;
@@ -10,7 +9,6 @@ h1 {
 
 h2 {
   color: black;
-  font-size: 28px;
   font-family: 'Raleway', sans-serif;
   font-weight: 500;
   text-align: center;
@@ -29,7 +27,6 @@ p {
 }
 
 .main-container {
-  max-width: 1000px; 
   position: relative;
   padding: 0;
 }
@@ -37,6 +34,32 @@ p {
 .page-title {
   padding-top: 35px;
   padding-bottom: 50px;
+}
+
+@media (min-width: 760px) {
+  h1 {
+    font-size: 44px;
+  }
+  h2 {
+    font-size: 28px;
+  }
+  .main-container {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 760px) {
+  h1 {
+    font-size: 34px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  .main-container {
+    max-width: 600;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 .strong {
